# simple-cli-calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/handlers/: CalculationHandler.cpp  CalculationHandler.h  EvaluateHandler.cpp  EvaluateHandler.h  FunctionHandler.h  ParseHandler.cpp  ParseHandler.h
src/helpers/: CalcHelper.cpp  CalcHelper.h  FunctionHandler.cpp  Helper.cpp  Helper.h
src/structs/: Element.cpp  Element.h  Expression.cpp  Expression.h  Function.cpp  Function.h
